[gd_scene load_steps=2 format=3 uid="uid://crm38itkjnuba"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_qhior"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhior")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_right = 144.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="MessageTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 152.0
offset_right = 552.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 36
text = "Test King V3!"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_right = 854.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 2

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 224.0
offset_right = 504.0
offset_bottom = 272.0
text = "Play"

[node name="LivesContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 336.0
offset_right = 528.0
offset_bottom = 40.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
